--- a/index.html
+++ b/index.html
@@ -1,17 +1,90 @@
 <!DOCTYPE html>
 <html>
   <head>
-     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-entity position="0 1 -2">
+
+        <!-- Table -->
+        <a-entity>
+          <a-box position="0 0 -5" width="4" height="0.1" depth="4" color="#8B4513"></a-box>
+          <a-box position="-1.8 -1 -3.8" width="0.2" height="2" depth="0.2" color="#8B4513"></a-box>
+          <a-box position="1.8 -1 -3.8" width="0.2" height="2" depth="0.2" color="#8B4513"></a-box>
+          <a-box position="-1.8 -1 -6.2" width="0.2" height="2" depth="0.2" color="#8B4513"></a-box>
+          <a-box position="1.8 -1 -6.2" width="0.2" height="2" depth="0.2" color="#8B4513"></a-box>
+        </a-entity>
+
+        <!-- Fruit Bowl -->
+        <a-entity id="fruitBowl" position="0 0.5 -5" rotation="0 0 0"
+                  animation__rotate="property: rotation; to: 0 360 0; loop: true; dur: 10000;">
+          <a-cylinder radius="1.5" height="0.5" color="#E0E0E0"></a-cylinder> <!-- Main body of the bowl -->
+
+          <!-- Fruit -->
+
+          <!-- First layer -->
+
+          <!-- layer 1 -->
+          <a-sphere position="0 1.5 0" radius="0.3" color="#FF0000"></a-sphere>
+
+          <!-- Second layer -->
+
+          <!-- layer 1 -->
+          <a-sphere position="0 1 0.5" radius="0.3" color="#FF0000"></a-sphere>
+          <a-sphere position="0.5 1 0.5" radius="0.3" color="#FFA500"></a-sphere>
+          <a-sphere position="-0.5 1 0.5" radius="0.3" color="#FFA500"></a-sphere>
+
+          <!-- layer 2 -->
+          <a-sphere position="0 1 0" radius="0.3" color="#FF0000"></a-sphere>
+          <a-sphere position="0.5 1 0" radius="0.3" color="#FFA500"></a-sphere>
+          <a-sphere position="-0.5 1 0" radius="0.3" color="#FFA500"></a-sphere>
+
+          <!-- layer 3 -->
+          <a-sphere position="0 1 -0.5" radius="0.3" color="#FF0000"></a-sphere>
+          <a-sphere position="0.5 1 -0.5" radius="0.3" color="#FFA500"></a-sphere>
+          <a-sphere position="-0.5 1 -0.5" radius="0.3" color="#FFA500"></a-sphere>
+
+          <!-- Third layer -->
+
+          <!-- layer 1 -->
+          <a-sphere position="0 0.5 0.75" radius="0.3" color="#FF0000"></a-sphere>
+          <a-sphere position="0.75 0.5 0.75" radius="0.3" color="#FFA500"></a-sphere>
+          <a-sphere position="-0.75 0.5 0.75" radius="0.3" color="#FFA500"></a-sphere>
+
+          <!-- layer 2 -->
+          <a-sphere position="0 0.5 0" radius="0.3" color="#FF0000"></a-sphere>
+          <a-sphere position="0.75 0.5 0" radius="0.3" color="#FFA500"></a-sphere>
+          <a-sphere position="-0.75 0.5 0" radius="0.3" color="#FFA500"></a-sphere>
+
+          <!-- layer 3 -->
+          <a-sphere position="0 0.5 -0.75" radius="0.3" color="#FF0000"></a-sphere>
+          <a-sphere position="0.75 0.5 -0.75" radius="0.3" color="#FFA500"></a-sphere>
+          <a-sphere position="-0.75 0.5 -0.75" radius="0.3" color="#FFA500"></a-sphere>
+
+        </a-entity>
+
+        <!-- Floor -->
+        <a-plane position="0 -2 -4" rotation="-90 0 0" width="8" height="8" color="#5C4033"></a-plane>
+
+        <!-- Sky -->
+        <a-sky color="#87CEEB"></a-sky>
+
+        <!-- Color Selector Script -->
+        <script>
+          // Function to get a random color from the given choices
+          function getRandomColor() {
+            var colors = ["#FF0000", "#008000", "#FFFF00", "#FFA500"];
+            return colors[Math.floor(Math.random() * colors.length)];
+          }
+
+          // Set random colors for all fruits
+          document.querySelectorAll('a-sphere').forEach(function(sphere) {
+            sphere.setAttribute('color', getRandomColor());
+          });
+        </script>
+      </a-entity>
     </a-scene>
-      <script src = "script.js"> </script>
   </body>
 </html>
